summative.moria.Moria.scala.code
gauche();gauche()
while (getCouleurSol()!=Color.green){
	while (!estSurBiscuit() && !estFaceMur()){
  	avance()}
	if (estSurBiscuit())
		{prendBiscuit()}
  if(estFaceMur){droite();avance();gauche();avance(); stop()}
	if (getCouleurSol()!=Color.green){
  	while (!estSurBiscuit())
    {recule()}}
  if(estSurBiscuit){
    avance();poseBiscuit();avance()}}